refactor: CacheManager 구조 개선